dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  labels:
    name: dashboard
spec:
  tls:
    - hosts:
        - myapp.com
      secretName: tls-secret-file
  rules:
  - host: google.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 80
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 80
  - host: gmail.google.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 80
  - host: playstore.google.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: playstore-service
            port: 
              number: 80
